--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -29,10 +29,14 @@
 
 .card .back {
 	transform: rotateY(180deg);
+	background-color: white;
+	display: grid;
+	place-content: center;
 }
 
 .card .front {
-	background-image: url('/src/assets/back.png');
+	background-image: url('/src/assets/back3.png');
+	background-size: 300px;
 }
 
 .card-slide {
